--- a/proyecto/templates/Lugares.html
+++ b/proyecto/templates/Lugares.html
@@ -75,7 +75,6 @@
                                     <li><a href="{% url 'pareja' %}">Parejas</a></li>
                                   </ul>
                             </div>
-                        </div>
                     </div>
                 </nav>
             </div>
@@ -101,8 +100,6 @@
         </section>
         <section class="section-md bg-default decor-text" data-content="Contact">
             <div class="container text-center">
-
-
                 <div class="row">
                     <div class="col-md-12  to-animate">
                         <table class="table table-sm">
@@ -124,8 +121,9 @@
                                         <td><img src="{{lugar.imagen1.url}}" width="100" height="100"> </td> 
                                     {% endif %} 
                                     <td>{{lugar.pelea}} </td>
-                                    <td><img src="{{lugar.imagen2.url}}" width="100" height="100"> </td> 
-                                    <td>                                        
+                                    {%if lugar.imagen2 != None%}
+                                        <td><img src="{{lugar.imagen2.url}}" width="100" height="100"> </td> 
+                                     {% endif %}                                       
                                         <form action="{% url 'eliminar_lugar' lugar.id %}" method="POST" class="d-inline">
                                             {% csrf_token %}
                                             <button type="submit" class="btn">
