--- a/proyecto/templates/Registro_Lugares.html
+++ b/proyecto/templates/Registro_Lugares.html
@@ -59,17 +59,17 @@
             <!-- RD Navbar Nav-->
             <div class="rd-navbar-nav-wrap rd-navbar-search_not-collapsable">
               <div class="rd-navbar-search_collapsable">
-                <ul class="rd-navbar-nav">
-                  <li><a href="{% url 'home' %}">Pecados Capitales</a>
-                  </li>
-                  <li><a href="{% url 'pelea' %}">Peleas</a>
-                  </li>
-                  <li><a href="{% url 'caballero' %}">Caballeros sacros</a>
-                  </li>
-                  <li><a href="{% url 'lugar' %}">Lugares</a>
-                  </li>
-                  <li><a href="{% url 'pareja' %}">Parejas</a></li>
-                </ul>
+                  <ul class="rd-navbar-nav">
+                      <li><a href="{% url 'home' %}">Pecados Capitales</a>
+                      </li>
+                      <li><a href="{% url 'pelea' %}">Peleas</a>
+                      </li>
+                      <li><a href="{% url 'caballero' %}">Caballeros sacros</a>
+                      </li>
+                      <li class="active"><a href="{% url 'lugar' %}">Lugares</a>
+                      </li>
+                      <li><a href="{% url 'pareja' %}">Parejas</a></li>
+                    </ul>
               </div>
             </div>
           </div>
