--- a/proyecto/templates/parejas.html
+++ b/proyecto/templates/parejas.html
@@ -57,7 +57,7 @@
                                 data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                             <!-- RD Navbar Brand-->
                             <div class="rd-navbar-brand"><a class="brand-name" href="home"><img
-                                        src="../static/images/pngguru.com.png" alt="" width="80px" height="33" /></a></div>
+                                        src="proyecto/static/images/pngguru.com.png" alt="" width="80px" height="33" /></a></div>
                         </div>
                         <!-- RD Navbar Nav-->
                         <div class="rd-navbar-nav-wrap rd-navbar-search_not-collapsable">
@@ -110,7 +110,7 @@
                                     <th>#</th>
                                     <th>Pareja 1</th>
                                     <th>Pareja 2</th>
-                                    
+                                    <th>Acciones</th>
                                 </tr>
                             </thead>
                             <tbody>
