--- a/proyecto/templates/caballeros.html
+++ b/proyecto/templates/caballeros.html
@@ -136,6 +136,7 @@
                             <th>Rango</th>
                             <th>Poder</th>
                             <th>Foto</th>
+                            <th>Acciones</th>
                           </tr>
                           {% for caballero in caballeros %}
                           <tr> 
@@ -146,6 +147,14 @@
                             {%if caballero.imagen != None%}
                             <td><img src="{{caballero.imagen.url}}" width="100" height="100"> </td> 
                             {% endif %}
+                            <td>
+                              <form action="{% url 'eliminar_caballero' caballero.id %}" method="POST" class="d-inline">
+                                {% csrf_token %}
+                                <button type="submit" class="btn">
+                                    <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+                                </button>                                            
+                            </form>  
+                            </td>                            
                           <tr>
                           {% endfor %} 
                           </table>
