--- a/proyecto/templates/index.html
+++ b/proyecto/templates/index.html
@@ -136,6 +136,7 @@
                           <th>Pecado</th>
                           <th>Poder</th>
                           <th>Foto</th>
+                          <th>Acciones</th>
                         </tr>
                         {% for pecado in pecados %}
                         <tr> 
@@ -146,6 +147,14 @@
                           {%if pecado.imagen != None%}
                           <td><img src="{{pecado.imagen.url}}" width="100" height="100"> </td> 
                           {% endif %}
+                          <td>
+                            <form action="{% url 'eliminar_pecado' pecado.id %}" method="POST" class="d-inline">
+                              {% csrf_token %}
+                              <button type="submit" class="btn">
+                                  <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+                              </button>                                            
+                          </form>  
+                          </td>  
                         <tr>
                         {% endfor %} 
                         </table>
