--- a/proyecto/templates/peleas.html
+++ b/proyecto/templates/peleas.html
@@ -89,6 +89,13 @@
                                 <div class="row justify-content-sm-center">
                                     <div class="col-md-10 col-xl-8">
                                         <h2 class="heading-decorated">Peleas</h2>
+                                        <span class="container text-center">
+                                            {% if msg %}
+                                                {{ msg | safe }}
+                                            {% else %}
+                                                Estas son las peleas registradas
+                                            {% endif %} 
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -98,6 +105,7 @@
             </section>
 
         </section>
+       
         <section class="section-md bg-default decor-text" data-content="Contact">
             <div class="container text-center">
 
@@ -110,6 +118,7 @@
                                     <th>#</th>
                                     <th>Peleador 1</th>
                                     <th>Peleador 2</th>
+                                    <th>Acciones</th>
                                     
                                 </tr>
                             </thead>
@@ -119,8 +128,17 @@
                                     <td>{{ forloop.counter }}</td>
                                     <td>{{pelea.peleador1}} </td>
                                     <td>{{pelea.peleador2}} </td>                                            
+                                    <td>
+                                        <form action="{% url 'eliminar_pelea' pelea.id %}" method="POST" class="d-inline">
+                                          {% csrf_token %}
+                                          <button type="submit" class="btn">
+                                              <i class="far fa-trash-alt fa-lg text-danger float-right"></i>
+                                          </button>                                            
+                                      </form>  
+                                      </td>  
                                 <tr>
-                                {% endfor %}                                    
+                                {% endfor %} 
+
                             </tbody>
                         </table>
                         <a href="{% url 'registrarPelea' %}"><button class="button button-primary button-shadow"
